@@ -20,7 +20,9 @@ package org.minuteflow.core.api.bean;
  * =========================LICENSE_END==================================
  */
 
+import java.util.Collections;
 import java.util.HashSet;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiConsumer;
@@ -32,32 +34,30 @@ import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.minuteflow.core.api.contract.CalculatedState;
 import org.minuteflow.core.api.contract.State;
-import org.minuteflow.core.api.contract.StateCollection;
 import org.minuteflow.core.api.exception.EntityUpdateRejectedException;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.Setter;
 
-@Getter
-@Setter
 public class JsonStateAccessor<Entity> extends BaseStateAccessor<Entity> {
     @Autowired
     private ObjectMapper objectMapper;
 
-    @Autowired
-    private StateCollection stateCollection;
-
-    private Function<Entity, String> stateGetter = null;
-    private BiConsumer<Entity, String> stateSetter = null;
+    private Set<State> managedStates = null;
+    private Set<State> calculatedStates = Collections.emptySet();
+    private Map<String, State> persistentStates = Collections.emptyMap();
 
     @Getter
-    @Setter(AccessLevel.NONE)
-    private Set<CalculatedState> calculatedStates = null;
+    @Setter
+    private Function<Entity, String> stateGetter = null;
+
+    @Getter
+    @Setter
+    private BiConsumer<Entity, String> stateSetter = null;
 
     //
 
@@ -86,7 +86,7 @@ public class JsonStateAccessor<Entity> extends BaseStateAccessor<Entity> {
         //
         Set<State> states = new HashSet<State>();
         for (String stateName : stateNames) {
-            State state = stateCollection.valueOf(stateName);
+            State state = persistentStates.get(stateName);
             if (state != null) {
                 states.add(state);
             } else {
@@ -94,7 +94,7 @@ public class JsonStateAccessor<Entity> extends BaseStateAccessor<Entity> {
             }
         }
         //
-        states.addAll(SetUtils.emptyIfNull(calculatedStates));
+        states.addAll(calculatedStates);
         //
         return states;
     }
@@ -118,11 +118,39 @@ public class JsonStateAccessor<Entity> extends BaseStateAccessor<Entity> {
 
     //
 
-    public void setCalculatedStates(Set<CalculatedState> calculatedStates) {
-        this.calculatedStates = calculatedStates;
+    public Set<State> getManagedStates() {
+        return managedStates;
     }
 
-    public void setCalculatedStates(CalculatedState... calculatedStates) {
-        setCalculatedStates((calculatedStates != null) ? Set.of(calculatedStates) : null);
+    public void setManagedStates(Set<State> managedStates) {
+        this.managedStates = managedStates;
+        //
+        if (managedStates != null) {
+            persistentStates = SetUtils.emptyIfNull(managedStates).stream(). //
+                    filter((state) -> !(state instanceof CalculatedState)). //
+                    collect(Collectors.toUnmodifiableMap(State::getName, Function.identity()));
+            calculatedStates = SetUtils.emptyIfNull(managedStates).stream(). //
+                    filter((state) -> (state instanceof CalculatedState)). //
+                    collect(Collectors.toUnmodifiableSet());
+        } else {
+            persistentStates = Collections.emptyMap();
+            calculatedStates = Collections.emptySet();
+        }
+    }
+
+    public JsonStateAccessor<Entity> withManagedStates(Set<State> managedStates) {
+        setManagedStates(managedStates);
+        return this;
+    }
+
+    public JsonStateAccessor<Entity> withManagedStates(State... managedStates) {
+        setManagedStates((managedStates != null) ? Set.of(managedStates) : null);
+        return this;
+    }
+
+    public JsonStateAccessor<Entity> withAccessors(Function<Entity, String> stateGetter, BiConsumer<Entity, String> stateSetter) {
+        this.stateGetter = stateGetter;
+        this.stateSetter = stateSetter;
+        return this;
     }
 }
